Make to collapse to 13 lines if over 20 lines.(Fix #27)
Currently, collapse to 15 lines if over 32 lines.
This commit reduce the number of lines of  trigger for collapse the toots.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -724,7 +724,8 @@
 }
 
 .status__content.status__content--collapsed {
-  max-height: 20px * 15; // 15 lines is roughly above 500 characters
+//  max-height: 20px * 15; // 15 lines is roughly above 500 characters
+max-height: 20px * 13; // 15 lines is roughly above 500 characters
 }
 
 .status__content__read-more-button {
